Add contrast to the banner button when focused

--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,12 @@ html {
   background-color: #522806;
 }
 
+.banner-content a:focus {
+
+  outline-color: #fff;
+
+}
+
 .card {
   min-height: 22em;
   border: .3rem solid #bea59b;
